<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddUrlContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp">

    <ImageView
        android:id="@+id/imageAddURL"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_web_link"
        android:contentDescription="@string/app_name"
        app:tint="#000000"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/imageAddURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageAddURL"
        app:layout_constraintTop_toTopOf="@id/imageAddURL"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubantu_bold"
        android:includeFontPadding="false"
        android:text="@string/add_url"
        android:textColor="#000000"
        android:textSize="@dimen/_14ssp"/>

    <EditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintTop_toBottomOf="@id/imageAddURL"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/enter_url"
        android:textColor="#000033"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:textColorHint="#333333"
        android:textSize="@dimen/_13ssp"
        />

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputURL"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add"
        android:textColor="#0066ff"
        android:textSize="@dimen/_13ssp"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintTop_toBottomOf="@id/inputURL"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="#0066ff"
        android:textSize="@dimen/_13ssp"/>

</androidx.constraintlayout.widget.ConstraintLayout>