<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:fontFamily="@font/ubantu_bold"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/noteskeep"
        android:background="@drawable/background_heading"
        android:textColor="#000000"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_search"
            app:tint="#000000"/>

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#4d4d4d"
            android:textSize="@dimen/_13ssp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_search"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/addNoteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/imageAddNoteMain"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:text="@string/new_note"
            android:textColor="#000000"
            android:textSize="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_160sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <ImageView
            android:id="@+id/imageAddNoteMain"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/background_add_button"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_add"
            app:tint="@color/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>











</androidx.constraintlayout.widget.ConstraintLayout>